data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3102.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\00\01\7f\02\95\80\80\80\00\01\03\65\6e"
    "\76\0d\65\78\74\65\72\6e\61\6c\5f\66\75\6e\63\00"
    "\00\03\83\80\80\80\00\02\01\01\0a\9a\80\80\80\00"
    "\02\87\80\80\80\00\00\10\00\41\2a\0f\0b\88\80\80"
    "\80\00\00\10\01\1a\41\00\0f\0b"
  )
""
)